Fixed issue where sub-nav was in the main block.

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -28,6 +28,7 @@ const lastEvent = response.events[response.events.length - 2];
     <body>
       <HeaderComponent />
       <NavComponent currentEvent={currentEvent} lastEvent={lastEvent} currentPage={currentPage} />
+      <slot name="nav" />
       <main>
         <slot />
       </main>
