--- a/src/pages/past/[eventId].astro
+++ b/src/pages/past/[eventId].astro
@@ -27,7 +27,7 @@ const { title } = Astro.props;
 ---
 
 <MainLayout currentPage="past">
-  <PastEventsNav eventId={eventId} />
+  <PastEventsNav eventId={eventId} slot="nav" />
   <section class="a double">
     <h2>{title}</h2>
     <EventStreamers eventId={eventId} />
