--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -9,27 +9,13 @@ const signUpsOpen = (
 
 ---
 <nav>
-  <a class={(currentPage === 'home') ? 'active' : ''} href="/">Current event</a>
+  <a class={(currentPage === 'home') ? 'active' : ''} href="/">Home</a>
   <a class={(currentPage === 'about') ? 'active' : ''} href="/about">About</a>
   <a class={(currentPage === 'past') ? 'active' : ''} href={"/past/" + lastEvent.id}>Past events</a>
-  <a class={(currentPage === 'charity') ? 'active' : ''} href="/charity">Charity</a>
-  {signUpsOpen && <a href="/sign-up">Sign up</a>}
+  { currentEvent.charity && <a class={(currentPage === 'charity') ? 'active' : ''} href="/charity">Charity</a> }
+  { signUpsOpen && <a href="/sign-up">Sign up</a> }
   <a href="/annotate">#annotate</a>
 </nav>
-<p class="charity">
-  <a class="charity-link" href="https://www.justgiving.com/page/nethackathon" target="_blank">
-    We're supporting Girls Who Code, donate now!
-  </a>
-</p>
 
 <style>
-  .charity {
-    text-align: center;
-    margin: 0;
-  }
-  .charity-link {
-    font-size: 1.2em;
-    font-weight: bold;
-    color: var(--color-c);
-  }
 </style>
