--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -158,4 +158,7 @@ const lastEvent = response.events[response.events.length - 2];
   nav a.active {
     color: var(--color-a);
   }
+  .hidden {
+    display: none !important;
+  }
 </style>
