--- a/src/components/Schedule.astro
+++ b/src/components/Schedule.astro
@@ -1,50 +1,34 @@
----
-import { DateTime, Info } from "luxon";
-import type { Streamer } from "../interfaces/streamer";
-import { data } from "../data/schedule";
-
-function formatStartTime(start: string) {
-  const dateTime = DateTime.fromMillis(parseInt(start)).toUTC();
-  return `${Info.weekdays()[dateTime.weekday - 1]}, ${dateTime.toLocaleString(DateTime.TIME_SIMPLE)}`;
-}
-
-const streamers = data.streamers.sort((a: Streamer, b: Streamer) => {
-  return a.start_time.localeCompare(b.start_time);
-});
-
----
-
 <h2>Schedule <span style="font-size: medium;">All times <span id="time-zone">UTC</span></span></h2>
 <table>
+  <colgroup>
+    <col style="width: 6em;">
+    <col style="width: 7em;">
+    <col style="width: 10em;">
+    <col>
+  </colgroup>
   <thead>
     <tr>
+      <th></th>
       <th>Date</th>
       <th>Channel</th>
       <th>Notes</th>
     </tr>
   </thead>
-  <tbody>
-  {streamers.sort().map((streamer: Streamer) => (
-    <tr class="schedule-row">
-      <td class="start-time" data-ts={streamer.start_time}>{formatStartTime(streamer.start_time)}</td>
-      <td><a href={`https://twitch.tv/${streamer.username}`}>{streamer.username}</a></td>
-      <td>{(streamer.notes) ? streamer.notes : ''}</td>
-    </tr>
-  ))}
-  </tbody>
+  <tbody id="schedule-tbody"></tbody>
 </table>
 
-<style>
+<style is:global>
   table {
     border-collapse: collapse;
     margin-bottom: 1em;
+    width: 100%;
+    font-size: 13pt;
   }
   td {
     border-bottom: 1px solid;
     padding: 16px;
     height: 21px;
     line-height: 21px;
-    min-width: 12em;
   }
   td[data-theme='dark'] {
     border-bottom-color: var(--color-light);
@@ -58,14 +42,54 @@ const streamers = data.streamers.sort((a: Streamer, b: Streamer) => {
 </style>
 
 <script>
-  import { DateTime, Info } from "luxon";
+  import { DateTime } from 'luxon';
+
+  function parseStartTime(start: string) {
+    const dateTime = DateTime.fromISO(start);
+    return {
+      day: dateTime.weekdayLong,
+      time: dateTime.toLocaleString(DateTime.TIME_SIMPLE)
+    };
+  }
+
+  async function loadSchedule() {
+    const scheduleTbody = document.getElementById('schedule-tbody');
+    const response = await fetch('https://api.nethackathon.org/event/current/schedule');
+    document.getElementById('time-zone').textContent = DateTime.local().offsetNameShort;
+    let lastWeekday = '';
+    const data = await response.json();
+    data.forEach((streamer) => {
+      const tr = document.createElement('tr');
+      tr.classList.add('schedule-row');
+      const startTime = parseStartTime(streamer.start_time);
+      const td0 = document.createElement('td');
+      td0.classList.add('weekday');
+      if (startTime.day !== lastWeekday) {
+        lastWeekday = startTime.day;
+        td0.innerHTML = startTime.day;
+      }
+      tr.appendChild(td0);
+      const td1 = document.createElement('td');
+      td1.classList.add('start-time');
+      td1.dataset.start = streamer.start_time;
+      td1.innerHTML = startTime.time;
+      tr.appendChild(td1);
+      const td2 = document.createElement('td');
+      td2.innerHTML = `<a href="https://twitch.tv/${streamer.username}">${streamer.username}</a>`;
+      tr.appendChild(td2);
+      const td3 = document.createElement('td');
+      td3.innerHTML = (streamer.notes) ? streamer.notes : '';
+      tr.appendChild(td3);
+      scheduleTbody.appendChild(tr);
+    });
+  }
 
   function highlightCurrentStreamer() {
     const trs = document.getElementsByClassName('schedule-row');
     let currentStreamer = false;
     for (let i = trs.length - 1; i > -1; i--) {
       const td = trs[i].getElementsByClassName('start-time')[0];
-      const dateTime = DateTime.fromMillis(parseInt(td.dataset.ts)).toLocal();
+      const dateTime = DateTime.fromISO(td.dataset.start).toLocal();
       if (!currentStreamer && dateTime < DateTime.local()) {
         currentStreamer = true;
         trs[i].classList.add('current-streamer');
@@ -75,19 +99,8 @@ const streamers = data.streamers.sort((a: Streamer, b: Streamer) => {
     }
   }
 
-  window.addEventListener('load', () => {
-    const timeZone = document.getElementById('time-zone');
-    if (!timeZone) return;
-    const tds = document.getElementsByClassName('start-time');
-    let lastDay = '';
-    for (let i = 0; i < tds.length; i++) {
-      const dateTime = DateTime.fromMillis(parseInt(tds[i].dataset.ts)).toLocal();
-      const day = Info.weekdays()[dateTime.weekday - 1];
-      const dayString = (day === lastDay) ? '' : day;
-      lastDay = day;
-      tds[i].innerHTML = `<div style="width: 6em; display: inline-block; color: rgb(234, 51, 247); font-weight: bold;" class="day">${dayString}</div> ${dateTime.toLocaleString(DateTime.TIME_SIMPLE)}`;
-    }
-    timeZone.innerHTML = DateTime.local().offsetNameShort;
+  window.addEventListener('load', async () => {
+    await loadSchedule();
     highlightCurrentStreamer();
     setInterval(() => {
       highlightCurrentStreamer();
