--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -79,16 +79,16 @@ const lastEvent = response.events[response.events.length - 2];
     border: 1px solid;
     border-radius: 3px;
   }
-  section a, section h2 {
+  section a, section h2, section h3 {
     color: var(--color-b);
   }
-  strong.a, section.a a, section.a h2 {
+  strong.a, section.a a, section.a h2, section.a h3 {
     color: var(--color-a);
   }
-  strong.b, section.b a, section.b h2 {
+  strong.b, section.b a, section.b h2, section.b h3 {
     color: var(--color-b);
   }
-  strong.c, section.c a, section.c h2 {
+  strong.c, section.c a, section.c h2, section.c h3 {
     color: var(--color-c);
   }
   @media (min-width: 1264px) {
