--- a/src/components/CurrentStreamer.astro
+++ b/src/components/CurrentStreamer.astro
@@ -1,4 +1,8 @@
-<section class="double a" id="current-streamer">
+---
+const { currentEvent } = Astro.props;
+---
+
+<section class="double a" id="current-streamer" data-start={currentEvent.eventStart} >
   <h2>Currently streaming: <a href="#" id="currently-streaming"></a></h2>
   <h3 id="up-next-h3">Up next: <a href="#" id="up-next"></a></h3>
   <div id="twitch-embed"></div>
@@ -13,24 +17,24 @@
 <script src="../js/twitch-embed-v1.js" ></script>
 
 <script>
-  import { startDate, data } from "../data/schedule.js";
   import { DateTime } from "luxon";
   import type { Streamer } from "../interfaces/streamer";
 
   function getCurrentStreamer(schedule: Streamer[], twitchEmbed) : string {
     const currentStreamerSection = document.getElementById('current-streamer');
     if (!currentStreamerSection) return "";
-    const eventStarted = (DateTime.now().ts >= startDate.toMillis());
+    const eventStart = currentStreamerSection.dataset.start;
+    const eventStarted = DateTime.now() >= DateTime.fromISO(eventStart);
     if (eventStarted) {
       currentStreamerSection.style.display = 'block';
     } else {
       return "";
     }
-    const now = DateTime.now().toMillis() + '';
+    const now = DateTime.now();
     let current = 0;
     let next = 1;
     for (let i = 0; i < schedule.length; i++) {
-      if (now > schedule[i].start_time) {
+      if (now > DateTime.fromISO(schedule[i].start_time)) {
         current = i;
         next = i + 1;
       } else {
@@ -62,7 +66,9 @@
     return currentStreamer;
   }
   window.addEventListener('load', async () => {
-    const schedule = data.streamers.sort((a: Streamer, b: Streamer) => {
+    const response = await fetch('https://api.nethackathon.org/event/current/schedule');
+    const data = await response.json();
+    const schedule = data.sort((a: Streamer, b: Streamer) => {
       return a.start_time.localeCompare(b.start_time);
     });
     let currentStreamer = getCurrentStreamer(schedule, null);
