--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -10,6 +10,7 @@ const signUpsOpen = (
 ---
 <nav>
   <a class={(currentPage === 'home') ? 'active' : ''} href="/">Home</a>
+  <a class={(currentPage === 'stats') ? 'active' : ''} href="/stats">Stats</a>
   <a class={(currentPage === 'about') ? 'active' : ''} href="/about">About</a>
   <a class={(currentPage === 'past') ? 'active' : ''} href={"/past/" + lastEvent.id}>Past events</a>
   { currentEvent.charity && <a class={(currentPage === 'charity') ? 'active' : ''} href="/charity">Charity</a> }
