--- a/src/pages/sign-up/index.astro
+++ b/src/pages/sign-up/index.astro
@@ -1,15 +1,16 @@
 ---
 import MainLayout from '../../layouts/MainLayout.astro';
 import SignUp from './_SignUp.vue';
+import { parseEvent } from '../../js/shared.js';
 
-const response = await fetch(`${import.meta.env.NODE_API}/event/current`)
-  .then((res) => res.json());
-const currentEvent = response.currentEvent;
+const { currentEvent } = await fetch(`${import.meta.env.NODE_API}/event/current`)
+  .then((response) => response.json());
+const eventObject = parseEvent(currentEvent);
+
 ---
 <MainLayout>
   <SignUp
     client:load
-    nodeApi={import.meta.env.NODE_API}
-    currentEvent={currentEvent}
+    currentEvent={eventObject}
   />
 </MainLayout>
